# Plasma-Agent

./: .git-commit-template  .gitignore  ARCHITECTURE.md  BUGFIX_SUMMARY.md  FASE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PHASE1_10_STABILITY_FIX.md  PHASE1_AUDIT.md  PHASE1_STABILITY_AUDIT.md  PHASE1_STATE_MACHINE.md  PHASE2_AUDIT.md  PHASE2_AUTONOMOUS_TESTING_REPORT.md  PHASE2_PLAN.md  PHASE3_FULL_PLAN.md  PHASE3_MVP_CLI_ROBUSTNESS_AUDIT.md  PHASE3_MVP_REPORT.md  PHASE3_MVP_STABILITY_AUDIT.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SUBPHASE_3_5_PLAN.md  SUBPHASE_3_6_PLAN.md  SYSTEM_PROMPT.md  TASK_BREAKDOWN.md  TASK_BREAKDOWN_PHASE3.md  TASK_BREAKDOWN_PHASE3_FULL.md  alembic.ini  debug_rolling.py  fix_clipboard.py  hiraukan_ini_qwen.py  pyproject.toml  test_all_features.ps1  test_autonomous.py  test_chat_quick.py  test_comprehensive.py  test_db_init.py  (+17 more)
docs/: PLASMA_THEME.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_payload.py  003_add_template_metrics.py  004_fix_template_metrics.py  005_add_template_versions.py  006_add_ab_tests.py  007_add_template_retirements.py  008_add_template_candidates.py  009_add_scheduling.py  010_add_alerts.py  011_security_tables.py  012_memory_system.py
src/plasmaagent/: __init__.py
src/plasmaagent/agent/: config.py  config_manager.py  ollama_client.py  orchestrator.py  permission_manager.py  repl.py  tools.py
src/plasmaagent/ai/: __init__.py  models.py
src/plasmaagent/cli/: alerts.py  files.py  logo.py  main.py  memory.py  metrics.py  monitor.py  schedule.py  tasks.py  theme.py  users.py
src/plasmaagent/core/: asyncio_compat.py  config.py  database.py  exceptions.py  schema.py  state_machine.py
src/plasmaagent/executor/: __init__.py  result.py  shell.py
src/plasmaagent/memory/: __init__.py  conversation_service.py  models.py  service.py  (+2 more)
tests/: conftest.py
tests/integration/: test_ab_testing_integration.py  test_agent_ollama_integration.py  test_auto_generator_integration.py  test_cli_generate.py  test_cli_generate_comprehensive.py  test_cli_generate_edge_cases.py  test_cli_metrics.py  test_e2e_metrics.py  test_e2e_metrics_flow.py  test_execution.py  test_execution_edge_cases.py  test_reliability_integration.py  test_retirement_integration.py  test_scheduling_integration.py  test_subphase_3_4_comprehensive.py  test_subphase_3_5_comprehensive.py  test_subphase_3_6_comprehensive.py  test_suggestions_integration.py  test_template_metrics_service.py  test_template_versioning_integration.py
tests/unit/: test_ab_test_service.py  test_alert_models.py  test_alert_service.py  test_audit_service.py  test_auth_service.py  test_auto_generator.py  test_circuit_breaker.py  test_clipboard.py  test_comprehensive.py  test_conditional_evaluator.py  test_config.py  test_config_manager.py  test_context_manager.py  test_conversation_service.py  test_cron_parser.py  test_dashboard.py  test_database.py  test_decomposer.py  test_dependency_graph.py  test_dependency_service.py  test_disaster_recovery.py  test_error_analyzer.py  test_graceful_degradation.py  test_health.py  test_memory_models.py  test_memory_service.py  test_metrics_aggregation_service.py  test_metrics_tracker.py  test_observability_models.py  test_ollama_client.py  test_onetime_scheduler.py  test_parallel_executor.py  test_pattern_service.py  test_permission_fix.py  test_permission_service.py  test_plasma_final.py  test_plasma_interactive.py  test_reasoning_service.py  test_recurring_patterns.py  test_reliability_backoff.py  (+16 more)
(+105 files in other folders)
