[project]
name = "plasmaagent"
version = "0.2.0"
description = "Database-Centric Agentic Execution Framework with SQLite & Vector Search"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "httpx>=0.28.1",
    "bcrypt>=5.0.0",
    "prompt-toolkit>=3.0.52",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "psutil>=6.0.0",
    "cryptography>=48.0.0",
    "pyperclip>=1.11.0",
]

[project.scripts]
plasma = "plasmaagent.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plasmaagent"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "alembic>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
